refactor: better errors for logging and save method